player-play associations
